[package]
name = "my-calculator"
version = "0.1.0"
authors = ["Robin Hundt <24554122+robinhundt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.32"
thiserror = "1.0.20"
bigdecimal = "0.2.0"